feat(loader): added ajax loader

--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -1,6 +1,7 @@
 @import (inline) "../../vendors/bootstrap.min.css";
 @import (inline) "../../bower_components/animate.css/animate.min.css";
 @import (inline) "../../bower_components/font-awesome/css/font-awesome.min.css";
+@import (inline) "../../bower_components/pace/themes/blue/pace-theme-minimal.css";
 
 .uniregistry {
 
@@ -30,6 +31,20 @@
     border: 1px solid #C8C8C8;
     border-radius: 2px;
     animation-duration: 500ms;
+  }
+
+  .btn-primary {
+    background: #3B8345;
+    box-shadow: none;
+    border: 0px solid #CCC;
+    color: #FFF;
+  }
+
+  .align-left {
+    text-align: left;
+    label {
+      text-align: inherit;
+    }
   }
 }
 
